<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:gravity="center_horizontal"
                  android:id="@+id/addAlarmSpinnerLayout"
                  android:layout_weight="0.5">
        <com.neverlate.NeverLate.activities.components.AndroidScrollSpinner.AndroidScrollSpinner
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:id="@+id/hourSpinner"
        />
        <com.neverlate.NeverLate.activities.components.AndroidScrollSpinner.AndroidScrollSpinner
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:id="@+id/minuteSpinner"
                />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <ToggleButton android:id="@+id/sundayToggleButton"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.14"
                      android:textOn="@string/S"
                      android:textOff="@string/S"/>
        <ToggleButton android:id="@+id/mondayToggleButton"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.14"
                      android:textOn="@string/M"
                      android:textOff="@string/M"/>
        <ToggleButton android:id="@+id/tuesdayToggleButton"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.14"
                      android:textOn="@string/T"
                      android:textOff="@string/T"/>
        <ToggleButton android:id="@+id/wednesdayToggleButton"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.14"
                      android:textOn="@string/W"
                      android:textOff="@string/W"/>
        <ToggleButton android:id="@+id/thursdayToggleButton"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.14"
                      android:textOn="@string/T"
                      android:textOff="@string/T"/>
        <ToggleButton android:id="@+id/fridayToggleButton"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.14"
                      android:textOn="@string/F"
                      android:textOff="@string/F"/>
        <ToggleButton android:id="@+id/saturdayToggleButton"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.14"
                      android:textOn="@string/S"
                      android:textOff="@string/S"/>
    </LinearLayout>
    <Button android:id="@+id/doneButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:onClick="onDoneClicked">
    </Button>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour24Clock"
            android:id="@+id/hour24switch"
            android:layout_gravity="center"
            android:enabled="true"
            android:onClick="createSpinners"/>

</LinearLayout>