<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:id="@+id/add_alarm_linear_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="41pt">
        <ImageView android:id="@+id/alarm_list_icon"
                   android:layout_width="40pt"
                   android:layout_height="40pt"
                   android:src="@drawable/alarm"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

            <TextView android:id="@+id/alarm_time_text"
                      android:layout_width="fill_parent"
                      android:layout_height="40pt"
                      android:textSize="60sp"
                      android:text="00:00 MM"
                      android:textAlignment="viewEnd"
                      android:layout_weight="0.7"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          >
                <TextView android:id="@+id/sundayTextView"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:text="@string/S"
                          android:layout_weight="0.14"/>
                <TextView android:id="@+id/mondayTextView"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:text="@string/M"
                          android:layout_weight="0.14"/>
                <TextView android:id="@+id/tuesdayTextView"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:text="@string/T"
                          android:layout_weight="0.14"/>
                <TextView android:id="@+id/wednesdayTextView"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:text="@string/W"
                          android:layout_weight="0.14"/>
                <TextView android:id="@+id/thursdayTextView"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:text="@string/T"
                          android:layout_weight="0.14"/>
                <TextView android:id="@+id/fridayTextView"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:text="@string/F"
                          android:layout_weight="0.14"/>
                <TextView android:id="@+id/saturdayTextView"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:text="@string/S"
                          android:layout_weight="0.14"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</merge>